# ava-langflow

./: .env.example  .gitignore  CHANGELOG.md  CROSS_INSTANCE_COORDINATION.md  DEPLOYMENT.md  FINAL_SUMMARY.md  INSTANCE_STATUS.md  LANGFUSE_INTEGRATION_PLAN.md  LAUNCH__session_id__avaLangflowAgenticFlywheel_2511180446.sh  PRE_Task_a66f8bd2-29f5-461d-ad65-36b65252d469.local-gemini.sh  PRODUCTION_READY.md  QUICK_START_COORDINATION.md  REDIS_SCHEMA.md  ROADMAP.md  SESSION_CONTINUATION_STATUS.md  SESSION_SUMMARY.md  USAGE_GUIDE.md  _env.sh
a66f8bd2-29f5-461d-ad65-36b65252d469/: COMPLETION_SUMMARY.md  FINAL_ORCHESTRATION_SUMMARY.md  GEMINI.md  ORCHESTRATION.md  ORCHESTRATION_REPORT_2025-11-18.md  PROJECT_COMPLETE.md  README.md
a66f8bd2-29f5-461d-ad65-36b65252d469/results/: 01_langflow_backend_COMPLETE.md  01_langflow_backend_IN_PROGRESS.md  02_langfuse_tracer_COMPLETE.md  03_redis_state_COMPLETE.md  (+3 more)
docs/: COMPLETE_TOOL_REFERENCE.md  FINAL_STATUS.md  INTEGRATION_COMPLETION_SUMMARY.md  LANGFLOW_INTEGRATION.md  UNIVERSAL_MCP_SERVER.md
examples/: basic_query.py
rispecs/: app.spec.md
scripts/: benchmark.py  health_check.py
src/: package.json
src/agentic_flywheel/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PLAN_BACKEND_MIGRATION_250929.md  README.md  __init__.py  cli.py  flowise-gateway.py  flowise-init.sh  flowise-manager.sh  flowise_integration.py  install-global.sh  persona_system.py  pyproject.toml  requirements.txt  universal_mcp_server.py
src/agentic_flywheel/adapters/: __init__.py  flowise_flow_adapter.py
src/agentic_flywheel/agentic_flywheel/: __init__.py  cli.py  config_manager.py  flowise_manager.py  gateway.py  init.py  intelligent_mcp_server.py  mcp_server.py  run_mcp_server.py  universal_mcp_server.py
src/agentic_flywheel/agentic_flywheel/config/: flow-registry.yaml
src/agentic_flywheel/backends/: __init__.py  base.py  registry.py
src/agentic_flywheel/backends/flowise/: __init__.py  flowise_backend.py
src/agentic_flywheel/backends/langflow/: __init__.py  langflow_backend.py
src/agentic_flywheel/flowise_admin/: __init__.py  config_sync.py  db_interface.py  flow_analyzer.py
src/agentic_flywheel/integrations/: __init__.py  langfuse_tracer.py  redis_state.py
src/agentic_flywheel/mcp_tools/: __init__.py  universal_query.py
src/agentic_flywheel/routing/: __init__.py  router.py
src/agentic_flywheel/tools/: __init__.py  admin_tools.py  backend_tools.py  universal_query.py
tests/: test_admin_tools.py  test_backend_tools.py  test_complete_integration.py  test_integration_e2e.py  test_integration_universal_server.py  test_langflow_backend.py  test_langflow_capabilities.py  test_langfuse_tracer.py  test_redis_state.py  test_universal_query.py
(+22 files in other folders)
