[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-flywheel"
version = "1.1.0"
description = "MCP-enabled Flowise automation with intelligent flow management and domain specialization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "JGT Team", email = "jgwill@jgwill.com"}
]
keywords = ["ai", "automation", "flowise", "mcp", "creative-orientation", "structural-tension", "llm", "domain-specialization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "mcp>=0.3.0",
    "asyncio-mqtt>=0.13.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0"
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "redis>=4.5.0"
]
full = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0", 
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "redis>=4.5.0"
]

[project.scripts]
agentic-flywheel = "agentic_flywheel.cli:main"
agentic-flywheel-config = "agentic_flywheel.config_manager:main"
agentic-flywheel-mcp = "agentic_flywheel.mcp_server:cli"
agentic-flywheel-gateway = "agentic_flywheel.gateway:main"
agentic-flywheel-init = "agentic_flywheel.init:main"

[project.urls]
Documentation = "https://agentic-flywheel.readthedocs.io/"
Repository = "https://github.com/jgwill/agentic-flywheel"
Issues = "https://github.com/jgwill/agentic-flywheel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_flywheel*"]

[tool.setuptools.package-data]
agentic_flywheel = [
    "config/*.yaml",
    "templates/*.yaml", 
    "docs/*.md"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true